<resources>
    <!-- Nome da Aplicação -->
    <string name="app_name">My Calculator</string>

    <!-- Textos do teclado -->
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="ponto">.</string>
    <string name="nada"> </string>
    <string name="multi">×</string>
    <string name="div">÷</string>
    <string name="soma">+</string>
    <string name="sub">-</string>
    <string name="result">=</string>
    <string name="limpar">C</string>
    <string name="apagar">apagar</string>

    <!-- Mensagem de aviso-->
    <string name="erro_result">Formula de calculo invalida!</string>
</resources>